# mailmind

./: .env.example  .gitignore  Makefile  README.md  app.py  llm_config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
core/: __init__.py  classifier.py  drafter.py  schemas.py
tests/: conftest.py  test_chains.py  test_schemas.py
